--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-	"scripts": {},
+	"scripts": {
+		"dev": "webpack-dev-server",
+		"build": "webpack"
+	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"css-loader": "^3.4.2",
 		"file-loader": "^5.0.2",
+		"html-webpack-plugin": "^3.2.0",
+		"less": "^3.13.1",
+		"less-loader": "^5.0.0",
 		"style-loader": "^1.1.3",
 		"url-loader": "^3.0.0",
 		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10"
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.2"
 	}
 }
